# file-converter-mcp

./: .gitignore  CONTRIBUTING.md  CONTRIBUTING_EN.md  DEPENDENCIES.md  Dockerfile  LICENSE  README.md  README_CN.md  cursor-mcp.config.json  file_converter_server.py  mcp.config.json  mcp.txt  pyproject.toml  start_mcp_server.py
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: python-test-pip.yml  python-test.yml
